syntax = "proto3";

package facade;

service Facade{

  rpc Echo(Message) returns (Message){}
  rpc RoundCount(Empty) returns (Count){}

}

message Empty {}

message Message {
  string message = 1;
}

message Count {
  int32 count = 1;
}
